--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -1,3 +1,4 @@
+set -g mouse on
 set -g base-index 1
 setw -g pane-base-index 1
 # List of plugins
@@ -14,4 +15,4 @@ set -g @plugin 'niksingh710/minimal-tmux-status'
 
 set -g status-position top 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
-run '~/.tmux/plugins/tpm/tpm'
+run '~/.config/tmux/plugins/tpm/tpm'
