--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -1,3 +1,8 @@
+set-option -g default-shell /bin/fish
+set -gq allow-passthrough on
+set -g default-terminal "screen-256color"
+set -g terminal-overrides '*:Tc'
+# set-option -sa terminal-features ',xterm-256color:RGB'
 set -g mouse on
 set -g base-index 1
 setw -g pane-base-index 1
